# ArmoniK.Samples

./: .dockerignore  .editorconfig  .gitignore  .readthedocs.yaml  AllSamples.sln  AllSamples.sln.DotSettings  README.md  index.html  manifest.json  renovate.json  xrefmap.yml
.docs/: .gitignore  README.md  app.config.ts  conf.py  nuxt.config.ts  package.json  pnpm-lock.yaml  requirements.txt
.docs/content/: 0.index.md
.github/actions/generate_partition/: action.yml
.github/workflows/: build.yml  build_documentations.yml  code-formatting.yml  deploy-docs.yml  release.yml  semantic-pull-request.yml  sonar.yml
Documentation/api/: index.md
Samples/: README.md
Samples/ArmoniK.Samples.EndToEndTests/: ArmoniK.Samples.EndToEndTests.csproj  ClientPayload.cs  Program.cs  ServiceContainer.cs
Samples/CustomClientGUI/CustomClientGUI/: App.config  CustomClientGUI.csproj  CustomClientGUI.sln  Program.cs  frmMain.Designer.cs  frmMain.cs  frmMain.resx  packages.config  ucActivities.Designer.cs  ucActivities.cs  ucComputeNode.Designer.cs  ucComputeNode.cs  ucDashBoard.Designer.cs  ucDashBoard.cs  ucDashBoard.resx  ucLogin.cs  (+5 more)
Samples/DataSynapsePricing/: DataSynapsePricing.sln  DataSynapsePricing.sln.DotSettings
Samples/GridServerLike/: DataSynapseLike.sln  README.md  nuget.config
Samples/HtcMock/: HtcMock.sln
Samples/HtcMockSymphony/: HtcMockSymphony.sln  README.md
Samples/HtcMockV3/: HtcMockV3.sln
Samples/StressTests/: ADVANCED_STRESS_TESTS.md  Armonik.Samples.StressTests.sln
Samples/SymphonyLike/: README.md  SymphonyLike.sln  nuget.config
Samples/UnifiedAPI/: Armonik.Samples.UnifiedAPI.sln  README.md
api/: ArmoniK.HelloWorld.Worker.ApplicationLifeTimeManager.html  ArmoniK.HelloWorld.Worker.Program.html  ArmoniK.HelloWorld.Worker.SampleComputerService.html  ArmoniK.HelloWorld.Worker.Startup.html  ArmoniK.HelloWorld.Worker.html  ArmoniK.Samples.Client.Utils.html  ArmoniK.Samples.Client.html  ArmoniK.Samples.Common.ClientPayload.TaskType.html  ArmoniK.Samples.Common.ClientPayload.html  ArmoniK.Samples.Common.SelectExtensions.html  ArmoniK.Samples.Common.Utils.html  ArmoniK.Samples.Common.html  ArmoniK.Samples.DynamicSubmission.Common.Table.html  ArmoniK.Samples.DynamicSubmission.Common.html  ArmoniK.Samples.DynamicSubmission.Worker.DynamicSubmissionWorker.html  ArmoniK.Samples.DynamicSubmission.Worker.html  ArmoniK.Samples.GridServer.Client.SelectExtensions.html  ArmoniK.Samples.GridServer.Client.ServiceFactoryExt.html  ArmoniK.Samples.GridServer.Client.Services.ServiceContainer.html  ArmoniK.Samples.GridServer.Client.Services.html  ArmoniK.Samples.GridServer.Client.html  ArmoniK.Samples.GridServer.Common.SelectExtensions.html  ArmoniK.Samples.GridServer.Common.html  ArmoniK.Samples.HelloWorld.Worker.HelloWorldWorker.html  ArmoniK.Samples.HelloWorld.Worker.MultipleResultsWorker.html  ArmoniK.Samples.HelloWorld.Worker.html  ArmoniK.Samples.HtcMock.Adapter.LoggerExt.html  ArmoniK.Samples.HtcMock.Adapter.Options.Grpc.html  ArmoniK.Samples.HtcMock.Adapter.Options.html  ArmoniK.Samples.HtcMock.Adapter.html  ArmoniK.Samples.HtcMock.Client.GridClient.html  ArmoniK.Samples.HtcMock.Client.HtcMockClient.html  ArmoniK.Samples.HtcMock.Client.HtcMockClientExt.html  ArmoniK.Samples.HtcMock.Client.ServiceCollectionExt.html  ArmoniK.Samples.HtcMock.Client.SessionClient.html  ArmoniK.Samples.HtcMock.Client.html  ArmoniK.Samples.HtcMock.GridWorker.ApplicationLifeTimeManager.html  ArmoniK.Samples.HtcMock.GridWorker.Program.html  ArmoniK.Samples.HtcMock.GridWorker.SampleComputerService.html  ArmoniK.Samples.HtcMock.GridWorker.html  (+29 more)
articles/: intro.html
cpp/ChainedArithmetic/: Makefile  README.md
cpp/ChainedArithmetic/worker/: ArithmeticService.h  CMakeLists.txt  Dockerfile  ServiceDispatch.cpp
cpp/HelloWorld/: Dockerfile.client  Dockerfile.worker  Makefile  README.md
cpp/HelloWorld/client/: CMakeLists.txt
cpp/HelloWorld/client/src/: main.cpp
cpp/HelloWorldAPI/: .gitignore  Dockerfile.client  Dockerfile.worker  Makefile  README.md  appsettings.json  run.sh
cpp/HelloWorldAPI/worker/: CMakeLists.txt  Dockerfile  Dockerfile.debian  Dockerfile.ubi8
cpp/HelloWorldAPI/worker/src/: main.cpp
cpp/HelloWorldC/: Makefile  README.md
cpp/HelloWorldC/client/: CMakeLists.txt  Dockerfile  HelloServiceHandler.h  main.cpp  ubi8.Dockerfile
cpp/HelloWorldSDK/: Makefile  README.md
cpp/HelloWorldSDK/client/: CMakeLists.txt  Dockerfile  Dockerfile.debian  Dockerfile.ubi8  HelloServiceHandler.h  main.cpp
cpp/HelloWorldSDK/worker/: CMakeLists.txt  Dockerfile  Dockerfile.debian  Dockerfile.ubi8  HelloService.h  ServiceDispatch.cpp
cpp/MultiplyProcessor/: Makefile
csharp/native/: Demo.sln  README.md  patch-csharp.diff
java/: .gitignore
java/client/: README.md  pom.xml
python/analysisCDF/: .env.example  Dockerfile  README.md
python/commandLine/: README.md
python/hello-gpu-pymonik/: Dockerfile  README.md  checkgpu.py  dockerfile  gpu_cpu.py  pyproject.toml  worker.py
python/hello-world/: Dockerfile  README.md
python/hello-world-gpu/: README.md  client-requirements.txt  client.py  dockerfile  dockerfile.aws  init.sh  readme.md  worker.py
python/hello-world-gpu-aws/: client.py  common.py  dockerfile  init.sh  readme.md  worker.py
python/mycomputation/: Dockerfile  pyproject.toml
python/mycomputation/src/tiles/client/: client.py
python/mycomputation/src/tiles/worker/: worker.py
python/packaged-helloworld/: Dockerfile  README.md  pyproject.toml
python/packaged-helloworld/src/helloworld/client/: client.py
python/packaged-helloworld/src/helloworld/worker/: worker.py
python/parallelbuilder/: .gitignore  Dockerfile  README.md  pyproject.toml
python/resim/: client-cpu-gpu.py  common.py
python/subtasking/: Dockerfile  README.md  client.py  requirements.txt  worker.py
python/yellowdog/: Dockerfile  README.md
tools/: parameters.tfvars  preprocess_doc.py  update.py
tools/tests/: build-upload-run-stress-test.sh  build-worker.sh  e2e-stress-test.sh  gridserver_like.sh  run-stress-tests.sh  stress-tests.sh  symphony_like.sh  test.sh  unified_api.sh  upload-to-gcs.sh
(+341 files in other folders)
